Update Dockerfile and configuration files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   booking-api:
     image: booking-api
     build: ./backend
-    container_name: booking_api
+    container_name: booking-api
     init: true
     networks:
       - frontend
@@ -12,13 +12,13 @@ services:
   booking-client:
     image: booking-client
     build: ./frontend
-    container_name: booking_client
+    container_name: booking-client
     init: true
     volumes:
       - ./frontend:/usr/src/app
     networks:
       - frontend
     ports:
-      - "8080:8080"
+      - "5174:5174"
 networks:
   frontend:
