--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,24 @@
-# Usa una imagen base de Node.js
+# Establece la imagen base de node
 FROM node:18-alpine
 
-# Establece el directorio de trabajo en /app
+# instala ts-node
+RUN npm install -g ts-node
+
+# Establece el directorio de trabajo en /usr/src/app
 WORKDIR /usr/src/app
 
-# Environment variables
-ENV NODE_ENV production
-
-# Copia el package.json y package-lock.json a /app
+# Copia los archivos necesarios para compilar e instalar las dependencias
 COPY package*.json ./
 
-# Instala las dependencias
-RUN npm ci --only=production
+# Instala las dependencias de producción
+RUN npm ci
 
-# Security improvement
-USER node
+# Copia el resto de los archivos al directorio de trabajo
+COPY . .
 
-# Copia el resto de los archivos a /app
-COPY --chown=node:node ./src . 
 
 # Expone el puerto 3000
 EXPOSE 3000
 
 # Comando para ejecutar la aplicación
-CMD ["node", "index.js"]
+CMD ["npm", "start"]
